apps/base/openspeedtest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openspeedtest
  labels:
    app.kubernetes.io/name: openspeedtest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
