apps/base/openspeedtest/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: openspeedtest
  namespace: openspeedtest
  labels:
    app.kubernetes.io/name: openspeedtest
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: openspeedtest
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 3000
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
